Fix layout bugs

--- a/src/css/utilities.css
+++ b/src/css/utilities.css
@@ -64,7 +64,11 @@ a {
 .footer-info {
   display: flex;
   justify-content: space-between;
-  width: 300px;
+}
+
+.footer-info {
+  flex-direction: column;
+  align-items: flex-start;
 }
 
 @media (max-width: 700px) {
@@ -81,7 +85,6 @@ a {
 @media (min-width: 700px) {
   .footer-info {
     flex-direction: row;
-    align-items: center;
   }
 
   .social-links {
@@ -90,7 +93,6 @@ a {
 }
 
 .social-links {
-  height: 150px;
   display: flex;
   justify-content: space-between;
 }
@@ -105,7 +107,6 @@ a {
 
 .link {
   display: flex;
-  align-items: center;
   justify-content: flex-start;
   padding: 15px 15px 15px 0;
 }
